tests/errors/from_yaml_wrong_type.dang
type Summary {
  children: [String!]!
}

let summary: Summary! = YAML.decode("oops")
